--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
@@ -27,10 +27,10 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:dataTable id="consulta" rows="10" var="car" value="#{gestionCursoController.cursoList}" 
+                    <p:dataTable id="consulta" paginatorPosition="bottom" rows="10" var="car" value="#{gestionCursoController.cursoList}" 
                                  paginator="true"
                                  paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="5,10,15"
+                                 rowsPerPageTemplate="10,20,40"
                                  reflow="true">
                         <p:column headerText="Nombre" filterBy="#{car.crNombre}" filterable="true" filterMatchMode="contains">
                             #{car.crNombre}
