--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/crear.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.gestionDocentes}"/>
+            <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
             <p:menuitem value="Registro de Expedientes"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
