--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/index.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.gestionDocentes}"/>
+            <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
             <p:menuitem value="Busqueda de Expedientes"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
@@ -51,7 +51,7 @@
                     <p:column headerText="Dirección" filterBy="#{car.alDireccion}" filterMatchMode="contains" filterable="true">
                         #{car.alDireccion}
                     </p:column>
-                    <p:column headerText="Acciones" style="width: 8%">
+                    <p:column headerText="Acciones" style="width: 12%">
                         <p:commandLink action="#{gestionarAlumnosController.ver(car)}"><i class="icon-visibility1 Fs25 Red" title="Ver Expediente" ></i></p:commandLink>
                         <p:commandLink action="#{gestionarAlumnosController.modificar(car)}"><i class="icon-compose Fs25 Red" title="Modificar Expediente" ></i></p:commandLink>
                         <p:commandLink action="#{gestionarAlumnosController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
