--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteAlumnos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteAlumnos/index.xhtml
@@ -17,65 +17,8 @@
         <p:tabView>
             <p:tab title="Reporte de Alumnos">
                 <h:form>
-                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                        <p:outputLabel value="Esta ayuda sirve un monton"/>
-                    </p:dialog>
-                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                    <div class="EmptyBox20"></div>
-                    <p:panelGrid columns="4">
-                        <p:outputLabel value="Año Escolar:"></p:outputLabel>
-                        <p:inputText value="#{formatoPantallas.anio2}"></p:inputText>
-                        <p:outputLabel value="Grado:"></p:outputLabel>
-                        <p:selectOneMenu >
-                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo30}"></f:selectItem>
-                        </p:selectOneMenu>
-                        <p:outputLabel value="Seccion:"></p:outputLabel>
-                        <p:selectOneMenu >
-                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo30}"></f:selectItem>
-                        </p:selectOneMenu>
-                    </p:panelGrid>
-                    <p:inputText value=""></p:inputText>
-                    <div class="EmptyBox20"></div>
-                    <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
-                                 paginator="false"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="10,20,40"
-                                 reflow="true">
-
-                        <p:column headerText="Alumno" >
-                            #{formatoPantallas.campo300}
-                        </p:column>
-                        <p:column headerText="Fecha Nacimiento" >
-                            #{formatoPantallas.fecha}
-                        </p:column>
-                        <p:column headerText="Edad" >
-                            #{formatoPantallas.numero2}
-                        </p:column>                        
-                        <p:column headerText="Direccion" >
-                            #{formatoPantallas.campo200}
-                        </p:column>
-                        <p:column headerText="Telefono" >
-                            #{formatoPantallas.telefono}
-                        </p:column>
-                        <p:column headerText="Grado Actual" >
-                            #{formatoPantallas.campo30}
-                        </p:column>
-                        <f:facet name="footer">
-                            Total de Alumnos 999
-                        </f:facet>
-                    </p:dataTable>
-                    <div class="EmptyBox20"></div>
-                    <div class="TexAlCenter">
-                        <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
-                            <p:outputLabel value="Exportar a:"></p:outputLabel>
-                            <p:selectOneRadio  id="console" value="#{radioView.console}">
-                                <f:selectItem itemLabel="Excel" itemValue="Excel" />
-                                <f:selectItem itemLabel="PDF" itemValue="PDF" />
-                            </p:selectOneRadio>
-                            <p:commandButton  value="Generar"></p:commandButton>
-                            <p:commandButton value="Refrescar"></p:commandButton>
-                        </h:panelGrid>
-                    </div>
+                    
+                            <p:commandButton action="#{reportesController.GenerarDocentePera()}" value="Generar reporte Docente asignado a PERA" ajax="false" style="width: 250px"/>
                 </h:form>
             </p:tab>
 
