generación de reportes exitosa

--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/Blank_Letter.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/Blank_Letter.jrxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-08-18T22:04:18 -->
+<!-- 2015-08-19T20:47:55 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_Letter" pageWidth="612" pageHeight="792" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
 	<queryString>
-		<![CDATA[select al_prim_nombre,al_segu_nombre,al_terc_nombre,al_prim_ape,al_segu_ape,al_terc_ape from sieni_alumno]]>
+		<![CDATA[]]>
 	</queryString>
 	<field name="al_prim_nombre" class="java.lang.String"/>
 	<field name="al_segu_nombre" class="java.lang.String"/>
