--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpAlumnos.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpAlumnos.jrxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-08-21T00:04:56 -->
+<!-- 2015-08-25T22:13:44 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
+	<parameter name="fechaGeneracion" class="java.lang.String"/>
+	<parameter name="anio" class="java.lang.String"/>
+	<parameter name="grado" class="java.lang.String"/>
+	<parameter name="seccion" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -17,86 +21,215 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="98" splitType="Stretch">
+		<band height="100" splitType="Stretch">
 			<staticText>
-				<reportElement x="180" y="10" width="205" height="30" uuid="6380fbb6-acf1-4bc4-9e77-3c16f32331f2"/>
-				<textElement textAlignment="Center"/>
+				<reportElement x="180" y="1" width="205" height="30" uuid="6380fbb6-acf1-4bc4-9e77-3c16f32331f2"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Centro Escolar San Ramón]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="180" y="40" width="205" height="30" uuid="b79a3114-94b7-4203-9a10-9c1efd94e65e"/>
-				<textElement textAlignment="Center"/>
+				<reportElement x="180" y="31" width="205" height="30" uuid="b79a3114-94b7-4203-9a10-9c1efd94e65e"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Reporte de Alumnos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="430" y="40" width="80" height="30" uuid="46e126d4-11a7-42e2-ba51-3128b20da3e3"/>
+				<reportElement x="390" y="80" width="104" height="20" uuid="46e126d4-11a7-42e2-ba51-3128b20da3e3"/>
 				<text><![CDATA[Fecha de generación:]]></text>
 			</staticText>
+			<image>
+				<reportElement x="5" y="4" width="105" height="46" uuid="efe7bbf6-afb3-4970-a868-fac4475e6689"/>
+				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="24" y="78" width="40" height="20" uuid="8505d060-dbc4-422d-afcc-1c25c03e8c8c"/>
+				<text><![CDATA[Año:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="134" y="78" width="46" height="20" uuid="cf6c1449-eb70-46db-8031-53e3ab00778c"/>
+				<text><![CDATA[Grado:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="240" y="78" width="50" height="20" uuid="22364d60-f8bb-47b5-abad-48aa925cae2f"/>
+				<text><![CDATA[Sección:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="64" y="78" width="70" height="20" uuid="487c95c4-a502-48d4-a864-60530568f3f2"/>
+				<textFieldExpression><![CDATA[$P{anio}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="180" y="78" width="60" height="20" uuid="8a6a66dd-1547-421b-ace8-f719cd598bdb"/>
+				<textFieldExpression><![CDATA[$P{grado}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="290" y="78" width="60" height="19" uuid="e5f1852c-6c38-492c-9851-e82d5255b9da"/>
+				<textFieldExpression><![CDATA[$P{seccion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="494" y="80" width="80" height="19" uuid="1a14dd55-a434-428d-a5b8-aee178745964"/>
+				<textFieldExpression><![CDATA[$P{fechaGeneracion}]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<columnHeader>
-		<band height="61" splitType="Stretch">
+		<band height="34" splitType="Stretch">
 			<staticText>
-				<reportElement x="42" y="0" width="80" height="30" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
-				<text><![CDATA[alumno]]></text>
+				<reportElement x="24" y="2" width="110" height="30" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
+				<box padding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Alumno]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="122" y="0" width="80" height="30" uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b"/>
-				<text><![CDATA[fechaNacimiento]]></text>
+				<reportElement x="134" y="2" width="80" height="30" uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b"/>
+				<box padding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Fecha de nacimiento]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="202" y="0" width="80" height="30" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
-				<text><![CDATA[edad]]></text>
+				<reportElement x="214" y="2" width="48" height="30" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
+				<box padding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Edad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="282" y="0" width="80" height="30" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
-				<text><![CDATA[direccion]]></text>
+				<reportElement x="262" y="2" width="140" height="30" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
+				<box padding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Dirección]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="362" y="0" width="80" height="30" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
-				<text><![CDATA[telefono]]></text>
+				<reportElement x="402" y="2" width="68" height="30" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
+				<box padding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Teléfono]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="442" y="0" width="80" height="30" uuid="a3d5f371-394c-4dd6-92c7-0c481cd09a43"/>
-				<text><![CDATA[gradoActual]]></text>
+				<reportElement x="470" y="2" width="64" height="30" uuid="a3d5f371-394c-4dd6-92c7-0c481cd09a43"/>
+				<box padding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Grado actual]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="83" splitType="Stretch">
+		<band height="28" splitType="Stretch">
 			<textField>
-				<reportElement x="42" y="0" width="80" height="30" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
-				<textFieldExpression><![CDATA[$F{alumno}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="122" y="0" width="80" height="30" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
-				<textFieldExpression><![CDATA[$F{fechaNacimiento}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="202" y="0" width="80" height="30" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42"/>
+				<reportElement x="214" y="-2" width="48" height="30" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42"/>
+				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{edad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="282" y="0" width="80" height="30" uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818"/>
+				<reportElement x="262" y="-2" width="140" height="30" uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818"/>
+				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textFieldExpression><![CDATA[$F{direccion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="362" y="0" width="80" height="30" uuid="595e14ef-9c02-4b87-8cb0-be2dded3ff6c"/>
+				<reportElement x="402" y="-2" width="68" height="30" uuid="595e14ef-9c02-4b87-8cb0-be2dded3ff6c"/>
+				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{telefono}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="442" y="0" width="80" height="30" uuid="817135f9-9545-4839-8ee5-4746ddf32348"/>
+				<reportElement x="470" y="-2" width="64" height="30" uuid="817135f9-9545-4839-8ee5-4746ddf32348"/>
+				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{gradoActual}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="24" y="-2" width="110" height="30" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
+				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textFieldExpression><![CDATA[$F{alumno}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="134" y="-2" width="80" height="30" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
+				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{fechaNacimiento}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band height="36" splitType="Stretch">
+			<textField evaluationTime="Report">
+				<reportElement x="470" y="0" width="100" height="30" uuid="f3075a9e-7660-48b2-a57d-4195504227e3"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
 	</pageFooter>
-	<summary>
-		<band height="42" splitType="Stretch"/>
-	</summary>
 </jasperReport>
