modificacion de pantallas para gestion de notas en base a estandar nuevo y correccion al eliminar registro en "ver" alumno y nota

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/ver.xhtml
@@ -21,10 +21,11 @@
                 <p:dialog widgetVar="dlgAyuda1" modal="true" appendTo="@(body)" header="Ayuda">
                     <p:outputLabel value="Esta ayuda sirve un monton Modifica"/>
                 </p:dialog>
+                <p:remoteCommand name="redirect" actionListener="#{gestionarAlumnosController.setIndexMenu(0)}"></p:remoteCommand>
                 <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
                     <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
                     <div class="EmptyBox20"></div>
-                    <p:commandButton value="Si" action="#{gestionarAlumnosController.eliminarExpediente()}" update="consultaForm" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
+                    <p:commandButton value="Si" action="#{gestionarAlumnosController.eliminarExpediente()}" update="consultaForm" oncomplete="PF('dlgEliminar').hide();redirect();"></p:commandButton>
                     <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
                 </p:dialog>
                 <div class="Container10" style="margin-top: 20px;margin-left: 40px;">
