--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
@@ -3,162 +3,65 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/WEB-INF/template.xhtml">
+                template="/WEB-INF/template.xhtml"
+                xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <ui:define name="breadCrumb">
-        <p:breadCrumb>
+        <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Curso" url="#"/>
             <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}"/>
+            <p:menuitem value="Busqueda de Notas" url="#"/>
             <p:separator />
         </p:breadCrumb>
+        <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
     </ui:define>
     <ui:define name="content">
-        <p:tabView tabindex="#{gestionNotaController.indexMenu}" activeIndex="#{gestionNotaController.indexMenu}" id="tabMenu">
-            <p:tab title="Consulta de Notas">
-                <h:form id="consultaForm">
-                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                        <p:outputLabel value="Esta ayuda sirve un monton"/>
-                    </p:dialog>
-                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+        <div class="EmptyBox5"></div>
+        <p:panel>
+            <h:form id="consultaForm">
+                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                    <p:outputLabel value="Esta ayuda sirve un monton"/>
+                </p:dialog>
+                <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
+                    <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
                     <div class="EmptyBox20"></div>
-                    <p:dataTable id="consulta" paginatorPosition="bottom" rows="10" var="car" value="#{gestionNotaController.notaList}" 
-                                 paginator="true"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="10,20,40"
-                                 reflow="true">
-                        <p:column headerText="Alumno" filterBy="#{car.idAlumno.nombreCompleto}" filterable="true" filterMatchMode="contains">
-                            #{car.idAlumno.nombreCompleto}
-                        </p:column>
-                        <p:column headerText="Materia" filterBy="#{car.idEvaluacion.idMateria.maNombre}" filterable="true" filterMatchMode="contains">
-                            #{car.idEvaluacion.idMateria.maNombre}
-                        </p:column>
-                        <p:column headerText="Tipo de Evaluación" filterBy="#{car.idEvaluacion.evTipo}" filterable="true" filterMatchMode="contains">
-                            #{car.idEvaluacion.evTipo}
-                        </p:column>
-                        <p:column headerText="Nota" filterBy="#{car.idNota}" filterable="true" filterMatchMode="contains">
-                            #{car.ntCalificacion}
-                        </p:column>
-                        <p:column headerText="Tipo de ingreso" filterBy="#{car.ntTipoIngreso}" filterable="true" filterMatchMode="contains">
-                            #{car.ntTipoIngreso}
-                        </p:column>
-                        <p:column headerText="Acciones">
-                            <p:commandLink action="#{gestionNotaController.modificar(car)}" update="tabMenu" >
-                                <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Nota"></i>
-                            </p:commandLink>
-                            <p:commandLink action="#{gestionNotaController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                                <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Nota"></i>
-                            </p:commandLink>
-                        </p:column>
-                    </p:dataTable>
-                    <div class="EmptyBox20"></div>
-                    <p:commandButton value="Registrar Nota" action="#{gestionNotaController.setIndexMenu(1)}" update="tabMenu"></p:commandButton>
-                    <p:commandButton value="Refrescar" action="#{gestionNotaController.refresh()}" update="consulta"></p:commandButton>
-                </h:form>
-            </p:tab>
-            <p:tab title="Registrar Nota">
-                <h:form>
-                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                        <p:outputLabel value="Esta ayuda sirve un monton"/>
-                    </p:dialog>
-                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                    <div class="EmptyBox20"></div>
-                    <p:panelGrid columns="2" class="Container50 Responsive" id="p1">
-                        <p:outputLabel for="alumno" value="Alumno: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="alumno"  class=" Responsive" value="#{gestionNotaController.idAlumno}">
-                            <f:selectItems itemValue ="#{al.idAlumno}" itemLabel="#{al.nombreCompleto}" value="#{gestionNotaController.alumnosList}" var="al"/>
-                        </p:selectOneMenu>
-                        <p:outputLabel for="materia" value="Materia: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="materia" class=" Responsive" value="#{gestionNotaController.idMateria}" valueChangeListener="#{gestionNotaController.getSeccionesGrado}">
-                            <f:selectItems itemValue ="#{mat.idMateria}" itemLabel="#{mat.maNombre}" value="#{gestionNotaController.materiasList}" var="mat"/>
-                            <p:ajax event="valueChange" update="evaluacion"/>
-                        </p:selectOneMenu>
-                        <p:outputLabel for="evaluacion" value="Evaluación: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu  id="evaluacion" class=" Responsive" value="#{gestionNotaController.idEvaluacion}">
-                            <f:selectItems itemValue ="#{eval.idEvaluacion}" itemLabel="#{eval.evNombre}" value="#{gestionNotaController.evaluacionesList}" var="eval"/>
-                        </p:selectOneMenu>
-                    </p:panelGrid>
-                    <p:panelGrid columns="2" class="Container50 Responsive" id="p2">
-                        <p:outputLabel for="nota" value="Nota: " class=" Responsive"></p:outputLabel>
-                        <p:spinner id="nota" min="0.0" value="#{gestionNotaController.notaNuevo.ntCalificacion}" max="10"></p:spinner>
-                        <p:outputLabel for="tipoIngreso" value="Tipo de ingreso: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="tipoIngreso"  class=" Responsive" value="#{gestionNotaController.notaNuevo.ntTipoIngreso}">
-                            <f:selectItem itemValue ="M" itemLabel="Manual"/>
-                            <f:selectItem itemValue ="A" itemLabel="Automático"/>
-                        </p:selectOneMenu>  
-                    </p:panelGrid>
-                    <div class="EmptyBox20"></div>
-                    <div class="Container100 Responsive">
-                        <p:commandButton value="Guardar" action="#{gestionNotaController.guardar()}" update="p1,p2,tabMenu" />
-                        <p:commandButton value="Limpiar" immediate="true">
-                            <p:ajax update="p1,p2" resetValues="true" />
-                        </p:commandButton>
-                        <p:commandButton value="Cancelar" immediate="true">
-                            <p:ajax update="p1,p2,tabMenu" resetValues="true" oncomplete="#{gestionNotaController.setIndexMenu(0)}"/>
-                        </p:commandButton>
-                        <div class="EmptyBox20"></div>
-                        <p:splitButton value="Otras Opciones" action="#">
-                            <p:menuitem value="Gestionar Docentes">    
-                            </p:menuitem>
-                            <p:menuitem value="Gestionar Alumnos">    
-                            </p:menuitem>
-                            <p:menuitem value="Gestionar Cursos">    
-                            </p:menuitem>
-                        </p:splitButton>
-                    </div>
-                </h:form>
-            </p:tab>
-            <p:tab title="Modificar Nota">
-                <h:form>
-                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                        <p:outputLabel value="Esta ayuda sirve un monton"/>
-                    </p:dialog>
-                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                    <div class="EmptyBox20"></div>
-                    <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p1">
-                        <p:outputLabel for="mod_alumno" value="Alumno: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="mod_alumno"  class=" Responsive" value="#{gestionNotaController.idAlumnoModifica}">
-                            <f:selectItems itemValue ="#{al.idAlumno}" itemLabel="#{al.nombreCompleto}" value="#{gestionNotaController.alumnosModificaList}" var="al"/>
-                        </p:selectOneMenu>
-                        <p:outputLabel for="mod_materia" value="Materia: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="mod_materia" class=" Responsive" value="#{gestionNotaController.idMateriaModifica}" valueChangeListener="#{gestionNotaController.getSeccionesGradoModifica}">
-                            <f:selectItems itemValue ="#{mat.idMateria}" itemLabel="#{mat.maNombre}" value="#{gestionNotaController.materiasList}" var="mat"/>
-                            <p:ajax event="valueChange" update="mod_evaluacion"/>
-                        </p:selectOneMenu>
-                        <p:outputLabel for="mod_evaluacion" value="Evaluación: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu  id="mod_evaluacion" class=" Responsive" value="#{gestionNotaController.idEvaluacionModifica}">
-                            <f:selectItems itemValue ="#{eval.idEvaluacion}" itemLabel="#{eval.evNombre}" value="#{gestionNotaController.evaluacionesModificaList}" var="eval"/>
-                        </p:selectOneMenu>
-                    </p:panelGrid>
-                    <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p2">
-                        <p:outputLabel for="mod_nota" value="Nota: " class=" Responsive"></p:outputLabel>
-                        <p:spinner id="mod_nota" min="0.0" value="#{gestionNotaController.notaModifica.ntCalificacion}" max="10"></p:spinner>
-                        <p:outputLabel for="mod_tipoIngreso" value="Tipo de ingreso: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="mod_tipoIngreso"  class=" Responsive" value="#{gestionNotaController.notaModifica.ntTipoIngreso}">
-                            <f:selectItem itemValue ="M" itemLabel="Manual"/>
-                            <f:selectItem itemValue ="A" itemLabel="Automático"/>
-                        </p:selectOneMenu>  
-                    </p:panelGrid>
-                    <div class="EmptyBox20"></div>
-                    <div class="Container100 Responsive">
-                        <p:commandButton value="Guardar" action="#{gestionNotaController.guardarModifica()}" update="mod_p1,mod_p2,tabMenu" />
-                        <p:commandButton value="Limpiar" immediate="true">
-                            <p:ajax update="mod_p1,mod_p2" resetValues="true" />
-                        </p:commandButton>
-                        <p:commandButton value="Cancelar" immediate="true">
-                            <p:ajax update="mod_p1,mod_p2,tabMenu" resetValues="true" oncomplete="#{gestionNotaController.setIndexMenu(0)}"/>
-                        </p:commandButton>
-                        <div class="EmptyBox20"></div>
-                        <p:splitButton value="Otras Opciones" action="#">
-                            <p:menuitem value="Gestionar Docentes">    
-                            </p:menuitem>
-                            <p:menuitem value="Gestionar Alumnos">    
-                            </p:menuitem>
-                            <p:menuitem value="Gestionar Cursos">    
-                            </p:menuitem>
-                        </p:splitButton>
-                    </div>
-                </h:form>
-            </p:tab>
-        </p:tabView>
+                    <p:commandButton value="Si" action="#{gestionNotaController.eliminarNota()}" update="consultaForm" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
+                    <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
+                </p:dialog>
+                <p:dataTable id="consulta" paginatorPosition="bottom" rows="10" var="car" value="#{gestionNotaController.notaList}" 
+                             paginator="true"
+                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                             rowsPerPageTemplate="10,20,40"
+                             reflow="true">
+                    <p:column headerText="Alumno" filterBy="#{car.idAlumno.nombreCompleto}" filterable="true" filterMatchMode="contains">
+                        #{car.idAlumno.nombreCompleto}
+                    </p:column>
+                    <p:column headerText="Materia" filterBy="#{car.idEvaluacion.idMateria.maNombre}" filterable="true" filterMatchMode="contains">
+                        #{car.idEvaluacion.idMateria.maNombre}
+                    </p:column>
+                    <p:column headerText="Tipo de Evaluación" filterBy="#{car.idEvaluacion.evTipo}" filterable="true" filterMatchMode="contains">
+                        #{car.idEvaluacion.evTipo}
+                    </p:column>
+                    <p:column headerText="Nota" filterBy="#{car.idNota}" filterable="true" filterMatchMode="contains">
+                        #{car.ntCalificacion}
+                    </p:column>
+                    <p:column headerText="Tipo de ingreso" filterBy="#{car.ntTipoIngreso}" filterable="true" filterMatchMode="contains">
+                        #{car.tipoIngreso}
+                    </p:column>
+                    <p:column headerText="Acciones">
+                        <p:commandLink action="#{gestionNotaController.ver(car)}"><i class="icon-visibility1 Fs25 Red" title="Ver Expediente" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionNotaController.modificar(car)}" >
+                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Nota"></i>
+                        </p:commandLink>
+                        <p:commandLink action="#{gestionNotaController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
+                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Nota"></i>
+                        </p:commandLink>
+                    </p:column>
+                </p:dataTable>
+                <div class="EmptyBox20"></div>
+                <p:commandButton value="Registrar Nota" actionListener="#{gestionNotaController.setIndexMenu(1)}"></p:commandButton>
+                <p:commandButton value="Refrescar" action="#{gestionNotaController.refresh()}" update="consulta"></p:commandButton>
+            </h:form>
+        </p:panel>
     </ui:define>
 </ui:composition>
